# proteon-pyg

./: .gitignore  CASE.md  CHANGELOG.md  LICENSE  README.md  evident.yaml  pyproject.toml
demos/: README.md  infra_demo.py  sanity_demo.py
notebooks/: 01_quickstart.ipynb  02_visualizing_features.ipynb
src/proteon_pyg/: __init__.py  features.py
tests/: test_features.py  test_parity.py
