[project]
name = "proteon-pyg"
version = "0.0.1"
description = "Proteon structural features (SASA, DSSP, CHARMM19+EEF1 / AMBER96 energies) as PyTorch Geometric Data tensors"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "David Teschner" }]
keywords = ["protein", "pytorch-geometric", "geometric-deep-learning", "structural-bioinformatics", "proteon"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    # v0.0.1 of proteon-pyg requires the batch primitives added in proteon
    # 0.2.0; the same primitives that power proteon-graphein's batch helper.
    "proteon>=0.2.0",
    "numpy",
]

[project.optional-dependencies]
pyg = ["torch", "torch_geometric"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteon_pyg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
